Add active plants from the journal
